# LittlePython

./: .gitignore  CHANGELOG.md  LittlePython.cabal  README.md
app/: Main.hs  Options.hs
examples/: book4_1.lpy  book4_2.lpy  book4_3.lpy  prog00.lpy  prog01.lpy  prog02.lpy  prog03.lpy  prog04.lpy  prog05.lpy  prog06.lpy  prog07.lpy
src/: Utils.hs
src/Cbits/: runtime.c
src/Compiler/: Phases.hs  Run.hs  Syntax.hs
src/Compiler/Phases/: AssignHomes.hs  AssignRegisters.hs  OptArith.hs  OptSExpr.hs  Parser.hs  PatchInstr.hs  ProEpilog.hs  Rco.hs  SelectInstr.hs
src/Compiler/Run/: Components.hs  Options.hs
src/Compiler/Syntax/: EvalLangSrc.hs  LangBase.hs  LangSrc.hs  LangSrcMon.hs  LangXAsm86.hs
src/Utils/: Redir.hs  Shell.hs
test/Compiler/: CompilerSpec.hs
test/Compiler/Phases/: SpecAssignHomes.hs  SpecAssignRegs.hs  SpecOptArith.hs  SpecOptSExpr.hs  SpecPatchInstr.hs  SpecRco.hs  SpecSelectInstr.hs
test/Compiler/Syntax/: SampleProgs.hs  SpecEval.hs  SpecLangSrc.hs  SpecLangSrcMon.hs  SpecLangXAsm86.hs  SpecPreprocess.hs
test/Utils/: Redir.hs
