cabal-version:      3.0
name:               LittlePython
version:            0.1.0.0
synopsis:           Haskell Compilation Essentials
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Roland Senn
maintainer:         rsx@bluewin.ch
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library compiler
    import:           warnings
    exposed-modules:  Compiler.Syntax
                      , Compiler.Phases
    other-modules:    Compiler.Syntax.LangBase
                      , Compiler.Syntax.LangSrc
                      , Compiler.Syntax.EvalLangSrc

                      , Compiler.Phases.OptArith

    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
    hs-source-dirs:   src
    default-language: GHC2024

executable LittlePython
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.20.0.0,
        compiler

    hs-source-dirs:   app
    default-language: GHC2024

test-suite LittlePython-test
    import:           warnings
    default-language: GHC2024
    other-modules:  Utils.Redir
                    , Compiler.CompilerSpec 
                    , Compiler.Syntax.SpecLangSrc
                    , Compiler.Syntax.SpecEval
                    , Compiler.Phases.SpecOptArith
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base ^>=4.20.0.0
        , hspec
        , compiler
        , temporary
        -- LittlePython
