cabal-version:      3.0
name:               LittlePython
version:            0.1.0.0
synopsis:           Haskell Compilation Essentials
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Roland Senn
maintainer:         rsx@bluewin.ch
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library compiler
    import:           warnings
    exposed-modules:  Compiler.Syntax
                      , Compiler.Phases
                      , Compiler.Run
                      , Utils
    other-modules:    Compiler.Syntax.LangBase
                      , Compiler.Syntax.LangSrc
                      , Compiler.Syntax.EvalLangSrc
                      , Compiler.Syntax.LangSrcMon
                      , Compiler.Syntax.LangXAsm86
                      , Compiler.Phases.Parser
                      , Compiler.Phases.OptSExpr
                      , Compiler.Phases.Rco
                      , Compiler.Phases.SelectInstr
                      , Compiler.Phases.AssignHomes
                      , Compiler.Phases.PatchInstr
                      , Compiler.Phases.ProEpilog
                      , Compiler.Run.Components 
                      , Compiler.Run.Options
                      , Utils.Redir
                      , Utils.Shell
                
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
                      , containers
                      , mtl
                      , megaparsec
                      , parser-combinators
                      , filepath
                      , directory
                      , temporary
                      , simple-get-opt 
                      , deepseq 
                      , process                      

    hs-source-dirs:   src
    default-language: GHC2024

executable lpy
    import:           warnings
    main-is:          Main.hs
    -- other-modules: 
    -- other-extensions:
    build-depends:
        base ^>=4.20.0.0,
       compiler

    hs-source-dirs:   app
    default-language: GHC2024

test-suite LittlePython-test
    import:           warnings
    default-language: GHC2024
    other-modules:  Compiler.Syntax.SpecPreprocess
                    , Compiler.CompilerSpec 
                    , Compiler.Syntax.SpecLangSrc
                    , Compiler.Syntax.SpecLangXAsm86
                    , Compiler.Syntax.SpecLangSrcMon
                    , Compiler.Syntax.SpecEval
                    , Compiler.Phases.SpecOptSExpr
                    , Compiler.Phases.SpecRco
                    , Compiler.Phases.SpecSelectInstr
                    , Compiler.Phases.SpecAssignHomes
                    , Compiler.Phases.SpecPatchInstr
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base ^>=4.20.0.0
        , hspec
        , compiler
        , filepath
        , directory
        , silently

